--- a/src/App.css
+++ b/src/App.css
@@ -1,44 +1,3 @@
-:root{
-  --primary-bg-color: #1e1f1f;
+input{
+  text-transform: lowercase;
 }
-
-body{
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
-
-.flex{
-  display: flex;
-}
-
-.logo {
-    height: 6em;
-    padding: 1.5em;
-    will-change: filter;
-    transition: filter 300ms;
-  }
-
-  @keyframes logo-spin {
-    from {
-      transform: rotate(0deg);
-    }
-    to {
-      transform: rotate(360deg);
-    }
-  }
-  
-  @media (prefers-reduced-motion: no-preference) {
-    a:nth-of-type(2) .logo {
-      animation: logo-spin infinite 20s linear;
-    }
-  }
-  
-  .card {
-    padding: 2em;
-  }
-  
-  .read-the-docs {
-    color: #888;
-  }
-  
