--- a/src/components/editor.css
+++ b/src/components/editor.css
@@ -22,7 +22,7 @@
 }
 .problem-container{
     background-color: var(--primary-bg-color);
-    color: white;
+    color: black;
     border: solid;
     width:35vw;
     /* margin-top:10vh; */
