--- a/src/styles/userGL.css
+++ b/src/styles/userGL.css
@@ -1,5 +1,5 @@
 .header-container {
-    background-image: url('../images/group.png');
+    background-image: url('../images/admin.png');
     display: flex;
     justify-content: left;
     height: 75vh;
