--- a/src/styles/adminLanding.css
+++ b/src/styles/adminLanding.css
@@ -20,7 +20,7 @@
     background-repeat: no-repeat;
     background-size: cover;
     background-attachment: fixed;
-    position: relative;
+    /* position: relative; */
     height: 75vh;
     overflow: hidden;
     /* background-repeat: no-repeat;
@@ -90,11 +90,12 @@
     border-radius: 20px;
     padding: 10px 20px;
     margin: 0 15px;
+    cursor: pointer;
 }
 
-.action-buttons:hover {
+/* .action-buttons:hover {
     transform: scale(1.1);
-}
+} */
 
 .table-container {
     /* padding: 0 40px; */
