--- a/src/styles/creategroup.css
+++ b/src/styles/creategroup.css
@@ -5,8 +5,6 @@
 .cgcontainer {
     font-family: 'Nunito Sans', sans-serif;
     position: absolute;
-    opacity: 0;
-    transform: scale(0.9);
     transition: all 0.2s ease-out;
     display: flex;
     justify-content: center;
@@ -24,14 +22,14 @@
 .cgoverlay {
     width: 100vw;
     height: 100vh;
-    /* background-color: rgba(0, 0, 0, 0.8); */
+    background-color: rgba(0, 0, 0, 0.3);
     /* opacity: 0.5; */
     justify-content: center;
     align-items: center;
 }
 
 .cgmainbody {
-    border-radius: 20px;
+    border-radius: 5px;
     width: 70vw;
     height: 80vh;
     background-color: #f0f0f0;
@@ -108,4 +106,21 @@
 .cgcancel-btn {
     background-color: rgb(82, 82, 82);
     color: rgb(238, 230, 230);
+}
+
+
+/* From here create questions css will start */
+.cqrightdiv{
+    margin-left: 50px;
+}
+.completeTestCase{
+    gap:20px;
+    flex-direction: row;
+}
+.cqtestcases{
+    max-height: 200px;
+    overflow: scroll;
+}
+.completeTestCase input{
+    width: 210px;
 }
