--- a/src/styles/adminLanding.css
+++ b/src/styles/adminLanding.css
@@ -13,7 +13,7 @@
 } 
 
 .header-container {
-    background-image: url("../images/coding.png");
+    background-image: url("../images/admin.png");
     display: flex;
     justify-content: space-around;
     align-items: center;
