--- a/src/styles/adminsubmit.css
+++ b/src/styles/adminsubmit.css
@@ -1,15 +1,20 @@
 th{
     border: solid 1px #000000;
     padding:5px;
-    margin: 0;
+    margin: 20px;
 }
 tr{
     padding:5px;
-    margin: 0;
+    margin: 10px;
     border:solid black 1px;
 }
 td{
     margin: 0;
-    padding:5px;
+    padding:15px;
     border:solid black 1px;
 }
+
+.Demo *{
+    margin-left: 500px;
+}
+
