Fix practice page and comment console.log lines

--- a/src/styles/signup.css
+++ b/src/styles/signup.css
@@ -6,7 +6,7 @@
     font-family: 'Encode Sans', sans-serif;
     /* font-family: 'Nunito Sans', sans-serif; */
     box-sizing: border-box;
-    color:red;
+    /* color:red; */
 }
 
 input {
